custom-nginx/yaml/hello-world.yaml
# This deployment meant to be used as an initial service for the ingress
# If there are any other services available, this deployment and service
# are not needed.
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels:
    greeting: hello
    department: world
spec:
  containers:
    - name: pathecho
      image: "email4tong/pathecho:latest"
      ports:
        - name: http
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: NodePort
  selector:
    greeting: hello
    department: world
  ports:
  - port: 8080
    targetPort: 8080
