custom-nginx/yaml/mappingingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: acme-challenge-service
spec:
  ports:
  - port: 80
    targetPort: 8089
  selector:
    acme.cert-manager.io/http01-solver: "true"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-balancer
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /.well-known/acme-challenge/*
        backend:
          serviceName: acme-challenge-service
          servicePort: 80
      - path: /hello
        backend:
          serviceName: hello-world
          servicePort: 80
